update name on cs dashboard

--- a/patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html
+++ b/patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html
@@ -153,9 +153,9 @@
                                     <div class="row">
                                         <dl class="dl-horizontal">
                                             <dt>Location:</dt>
-                                            <dd>New Haven, CT</dd>
+                                            <dd>Chicago, IL</dd>
                                             <dt>Company:</dt>
-                                            <dd>Northeast Medical Group</dd>
+                                            <dd>Presence Health</dd>
                                             <dt>Minimum Experience:</dt>
                                             <dd>2</dd>
                                             <dt>Match Score:</dt>
@@ -164,22 +164,20 @@
                                     </div>
                                     <div class="row">
                                         <p>
-                                            <a href="https://northeast-ynhhs.icims.com/jobs/4267/medical-assistant/job?mode=job&iis=Indeed&iisn=Indeed.com&mobile=false&width=908&height=500&bga=true&needsRedirect=false&jan1offset=-360&jun1offset=-300" class="btn btn-primary">
+                                            <a href="https://www.healthcaresource.com/presencehealth/index.cfm?fuseaction=search.jobDetails&template=dsp_job_details.cfm&cJobId=10030619">
                                                 <i class="fa fa-lg"></i> Apply
                                             </a>
                                         </p>
                                     </div>
                                     <div class="row">
-                                        <p>Overview To be part of our organization, every employee should understand and share in the YNHHS Vision, support our Mission, and live our Values. These values&mdash;integrity, patient-centered, respect, accountability, and compassion&mdash;must guide what we do, as individuals and professionals, every day.</p>
-
-<p>EEO/AA Minority/Female/Disability/Veteran Responsibilities Responsible for assisting physicians/providers with patient care, rooming patients, clerical, environmental and organizational tasks. Responsible for appointment scheduling and chart management. Provides information to patients so they may fully utilize and benefit from the practice services. Conveys a positive image of the practice. Qualifications EDUCATION: High school degree or equivalent required. Completion of a medical assisting program and certification preferred.   EXPERIENCE: Minimum of 1 year private practice medical assistant experience preferred in a primary care or specialist office.   LICENSURE: Medical Assisting Certification preferred   PHYSICAL DEMAND: MMR is required. Varivax (chicken pox vaccine) or evidence of prior chicken pox is required. Hepatitis B (or signed declination) is required for those with potential exposure to blood/body fluids. Tdap and influenza vaccination are strongly encouraged. Must complete work in a timely fashion.       Additional Information SPECIAL SKILLS Excellent, organizational, communication, customer service and teamwork skills required. Ability to multi-task is essential. EMR experience preferred and working knowledge of Microsoft office applications required. CPR certification preferred. Bilingual preferred but not required. Core philosophy or values consistent with a patient-centered approach to care. Demonstrates professional, appropriate, effective and tactful written, verbal and nonverbal communication with patients, families, medical staff, colleagues, vendors, and other departments throughout the continuum of care to promote continuity of care and services and enhance clinical image.</p>
+                                        <p>Bilingual, English/Spanish is required, two years prior experience, and a Medical Assistant Certification is a plus!!<o:p></o:p></FONT></FONT></P>  <P mce_keep="true"><FONT size=3><FONT face="Times New Roman">Obtains medical history and vital signs. Accurately and legibly documents in the medical record. Performs a variety of procedures including venipuncture, EKG, lab tests and injections. Assists physician with physical exams, medical procedures and treatments. Maintains all required lab and medication logs. Maintains cleanliness and general appearance of exam rooms. Performs telephone and patient triage. Assists with administrative duties as necessary. <o:p></o:p></FONT></FONT></P>  <P mce_keep="true"><FONT size=3 face="Times New Roman">Must have excellent verbal and written communication skills and prefer working knowledge of EPIC EMR system a plus.</FONT> <o:p></o:p></P>  <P mce_keep="true">&nbsp;</P> <P> Presence Health is the largest health system based in Illinois, created in November 2011 through the merger of Provena Health and Resurrection Health Care. With over 150 locations, from physician offices and convenient outpatient centers to quality hospitals and senior living communities, we’re in communities big and small. Visit presencehealth.org to learn more.</p>
                                     </div>
                                     <div class="row">
                                         <dl class="dl-horizontal">
                                             <dt>Location:</dt>
-                                            <dd>New Haven, CT</dd>
+                                            <dd>Chicago, IL</dd>
                                             <dt>Company:</dt>
-                                            <dd>Northeast Medical Group</dd>
+                                            <dd>Presence Health</dd>
                                             <dt>Minimum Experience:</dt>
                                             <dd>2</dd>
                                             <dt>Match Score:</dt>
@@ -188,7 +186,7 @@
                                     </div>
                                     <div class="row">
                                         <p>
-                                            <a href="https://northeast-ynhhs.icims.com/jobs/4267/medical-assistant/job?mode=job&iis=Indeed&iisn=Indeed.com&mobile=false&width=908&height=500&bga=true&needsRedirect=false&jan1offset=-360&jun1offset=-300" class="btn btn-primary">
+                                            <a href="https://www.healthcaresource.com/presencehealth/index.cfm?fuseaction=search.jobDetails&template=dsp_job_details.cfm&cJobId=10030619">
                                                 <i class="fa fa-lg"></i> Apply
                                             </a>
                                         </p>
