--- a/patterns/04-pages-02-job-seeker-02-job-seeker-matches/04-pages-02-job-seeker-02-job-seeker-matches.html
+++ b/patterns/04-pages-02-job-seeker-02-job-seeker-matches/04-pages-02-job-seeker-02-job-seeker-matches.html
@@ -163,7 +163,7 @@
                             <span class="title value">Medical Assistant</span>
                         </a>
                         <span class="headline">
-                            <strong>New Haven, CT</strong> - Northeast Medical Group
+                            <strong>Chicago, IL</strong> - Presence Health
                         </span>
                     </div>
                     <div class="col-sm-4 text-right">
@@ -200,10 +200,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Medical Assistant</span></span>
+                            <span class="title value">Extra Help Certified Medical Assistant - Mile Square</span></span>
                         </a>
                         <span class="headline">
-                            <strong>Westbrook, CT</strong> - Middlesex Hospital
+                            <strong>Chicago, IL</strong> - University of Illinois at Chicago
                         </span>
                     </div>
                     <div class="col-sm-4 text-right">
@@ -240,10 +240,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Medical Assistant II</span>
+                            <span class="title value">Certified Medical Assistant</span>
                         </a>
                         <span class="headline">
-                            <strong>Worcester, MA</strong> - Reliant Medical Group
+                            <strong>Chicago, IL</strong> - Saint Anthony Hospital
                         </span>
                     </div>
                     <div class="col-sm-4 text-right">
