--- a/patterns/04-pages-00-career-services-00-career-services-browse/04-pages-00-career-services-00-career-services-browse.html
+++ b/patterns/04-pages-00-career-services-00-career-services-browse/04-pages-00-career-services-00-career-services-browse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="pl">
 	<head>
-		<title>Porter and Chester: Browse Students</title>
+		<title>City Colleges of Chicago: Browse Students</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width" />
 
@@ -125,10 +125,10 @@
                             <div class="col-lg-12">
                                 <ol class="breadcrumb">
                                     <li><a href="#">Home</a></li>
-                                    <li class="active"><span>Porter and Chester: Browse Students</span></li>
+                                    <li class="active"><span>City Colleges of Chicago: Browse Students</span></li>
                                 </ol>
 
-                                <h1>Porter and Chester: Browse Students</h1>
+                                <h1>City Colleges of Chicago: Browse Students</h1>
                             </div>
                         </div>
 
