--- a/patterns/04-pages-02-job-seeker-02-job-seeker-browse-jobs/04-pages-02-job-seeker-02-job-seeker-browse-jobs.html
+++ b/patterns/04-pages-02-job-seeker-02-job-seeker-browse-jobs/04-pages-02-job-seeker-02-job-seeker-browse-jobs.html
@@ -160,7 +160,7 @@
                             <span class="title value">Medical Assistant</span></span>
                         </a>
                         <span class="headline">
-                            <strong>New Haven, CT</strong> - Northeast Medical Group
+                            <strong>Chicago, IL</strong> - Presence Health
                         </span>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                             <span class="title value">Medical Assistant</span>
                         </a>
                         <span class="headline">
-                            <strong>Fairfield, CT</strong> - Bridgeport Hospital
+                            <strong>Chicago, IL</strong> - Surgery Partners
                         </span>
                     </div>
                 </div>
@@ -233,10 +233,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Rep, PS I (Phleb) - Branford, CT</span>
+                            <span class="title value">Certified Medical Assistant</span>
                         </a>
                         <span class="headline">
-                            <strong>Branford, CT</strong> - Quest Diagnostics
+                            <strong>Chicago, IL</strong> - Saint Anthony Hospital
                         </span>
                     </div>
                 </div>
@@ -267,10 +267,10 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <a href="../../patterns/04-pages-03-job-03-job/04-pages-03-job-03-job.html">
-                            <span class="title value">Medical Assistant/Referral Coordinator</span>
+                            <span class="title value">Certified Medical Assistant (CMA)</span>
                         </a>
                         <span class="headline">
-                            <strong>Rocky Hill, CT</strong> - Rocky Hill Pediatrics
+                            <strong>Chicago, IL</strong> - Our Health
                         </span>
                     </div>
                 </div>
