--- a/patterns/04-pages-01-landing-01-landing-register/04-pages-01-landing-01-landing-register.html
+++ b/patterns/04-pages-01-landing-01-landing-register/04-pages-01-landing-01-landing-register.html
@@ -50,11 +50,11 @@
                         <div class="col-xs-12">
                             <header id="login-header">
                                 <div id="login-logo">
-                                    <img src="https://www.dropbox.com/s/5x338la5pljlme5/porterchester-logo.jpg?dl=1" alt=""/>
+                                    <img src="https://www.dropbox.com/s/u8hbjfpgkr1e1p1/ccc-logo.png?dl=1" alt=""/>
                                 </div>
                             </header>
                             <div id="login-box-inner">
-                                <h4 class="text-center">Create your Better Weekdays account at Porter and Chester Institute</h4>
+                                <h4 class="text-center">Create your Better Weekdays account at City Colleges of Chicago</h4>
                                 <form role="form" action="../../patterns/04-pages-02-job-seeker-02-job-seeker-dashboard/04-pages-02-job-seeker-02-job-seeker-dashboard.html">
                                     <div class="input-group">
                                         <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
